posiGen_FullsendBox/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Service_Description__c</fullName>
        <label>Service Description</label>
        <picklist>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Leak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermostat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Repair Work Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFL&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caulking and Weather-stripping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Heater Jacket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duct Sealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expectation Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Safety- Serious Violation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Due_Date2__c</fullName>
        <label>Service Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Due_Date__c</fullName>
        <formula>Date_Sent_to_Service_Contractor__c + 15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>QA/QC Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Leak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU Quality Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove &amp; Reinstall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size_of_System__c</fullName>
        <label>Size of System</label>
        <picklist>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Name_for_Sharing_Rule__c</fullName>
        <description>This is a text version of the Subcontractor name, this is required b/c sharing rules can&apos;t filter on formula / lookup fields.</description>
        <label>Subcontractor Name for Sharing Rule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <picklist>
            <picklistValues>
                <fullName>Net Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Leak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This gets backfilled 1/hr by a process</description>
        <label>System</label>
        <referenceTo>Systems__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Truck_Roll_Subtype__c</fullName>
        <label>Truck Roll Subtype</label>
        <picklist>
            <controllingField>Truck_Roll_Type__c</controllingField>
            <picklistValues>
                <fullName>Itron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posigen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Truck_Roll_Type__c</fullName>
        <label>Truck Roll Type</label>
        <picklist>
            <picklistValues>
                <fullName>C/U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Meter__c</fullName>
        <label>Type of Meter</label>
        <picklist>
            <controllingField>Is_there_a_Net_Meter_Present__c</controllingField>
            <picklistValues>
                <fullName>Analog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_System__c</fullName>
        <label>Type of System</label>
        <picklist>
            <picklistValues>
                <fullName>Growatt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Brigde</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UA_State__c</fullName>
        <formula>PG_Product__r.Opportunity__r.Elec_Acct_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UA State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UA_Zip__c</fullName>
        <formula>PG_Product__r.Opportunity__r.Elec_Acct_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UA Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Phase_is_it_currently__c</fullName>
        <label>What Phase is it currently?</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>box__FolderID__c</fullName>
        <description>This field is used to store the folder id when the files are uploaded to BOX</description>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Dispatch</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Case_Subject__c</columns>
        <columns>Case_Description__c</columns>
        <columns>Initial_Case_Comment__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Full_Address__c</columns>
        <columns>NAME</columns>
        <columns>Mobile_Number__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Last_Case_Comment__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_Group__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Escalated,Reopened</value>
        </filters>
        <label>!Dispatch</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EE_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Assigned_To_Subcontractor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.EE_Cases</value>
        </filters>
        <label>EE Cases</label>
        <sharedTo>
            <group>Customer_Service_Representatives</group>
            <group>EE_office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EE_Cases1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Full_Address__c</columns>
        <columns>City__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Assigned_To_Subcontractor__c</columns>
        <columns>Initial_Case_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.EE_Cases</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Request to Close</value>
        </filters>
        <label>EE Cases w Description</label>
    </listViews>
    <listViews>
        <fullName>EE_Cases_w_Description</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Full_Address__c</columns>
        <columns>City__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Assigned_Group__c</columns>
        <columns>Assigned_To_Subcontractor__c</columns>
        <columns>Initial_Case_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Master_Cases</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Request to Close</value>
        </filters>
        <filters>
            <field>Case_Description__c</field>
            <operation>equals</operation>
            <value>Roof Leak</value>
        </filters>
        <label>PV Roof Leak Cases</label>
    </listViews>
    <listViews>
        <fullName>EE_Open_Cases_I_Did_Not_Create</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>I_created_this_Case__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.EE_Cases</value>
        </filters>
        <label>EE Open Cases I Did Not Create</label>
        <sharedTo>
            <group>EE_Assessors</group>
            <group>EE_Contractors</group>
            <group>EE_office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Field_Techs</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Case_Subject__c</columns>
        <columns>Case_Description__c</columns>
        <columns>Initial_Case_Comment__c</columns>
        <columns>Last_Case_Comment__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Mobile_Number__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_Group__c</field>
            <operation>equals</operation>
            <value>Field Tech</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Escalated,Reopened</value>
        </filters>
        <label>!Field Techs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Field_Techs_x2</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Full_Address__c</columns>
        <columns>Service_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Requires_2_Technicians__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Escalated,Reopened</value>
        </filters>
        <filters>
            <field>Assigned_Group__c</field>
            <operation>equals</operation>
            <value>Field Tech</value>
        </filters>
        <label>!Field Techs x2</label>
    </listViews>
    <listViews>
        <fullName>Open_Cases_On_Delinquent_Accounts</fullName>
        <columns>Num_of_Delinquent_Leases_on_this_Account__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Is_Account_Past_Due__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Cases On Delinquent Accounts</label>
    </listViews>
    <listViews>
        <fullName>Partner_Open_Cases</fullName>
        <columns>Service_Area__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Full_Address__c</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Assigned_Group__c</columns>
        <columns>Date_Sent_to_Service_Contractor__c</columns>
        <columns>Assigned_To_Subcontractor__c</columns>
        <columns>Last_Case_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To_Subcontractor__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>_Partner Open Cases</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Retrofitz_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Assigned_Group__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.EE_Cases</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>kcarr</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Assigned_Group__c</field>
            <operation>equals</operation>
            <value>Retro Fitz</value>
        </filters>
        <label>Retrofitz Open</label>
        <sharedTo>
            <group>EE_office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Status_Hold</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Case_Description__c</columns>
        <columns>Initial_Case_Comment__c</columns>
        <columns>Last_Case_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On Hold</value>
        </filters>
        <label>Status Hold</label>
    </listViews>
    <listViews>
        <fullName>Status_Manager</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Case_Subject__c</columns>
        <columns>Case_Description__c</columns>
        <columns>Last_Case_Comment__c</columns>
        <columns>Address__c</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Request Manager Review</value>
        </filters>
        <label>Status Manager</label>
    </listViews>
    <listViews>
        <fullName>Status_Provisioning</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Case_Subject__c</columns>
        <columns>Case_Description__c</columns>
        <columns>Initial_Case_Comment__c</columns>
        <columns>Last_Case_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Master_Cases</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Check Meter Provisioning</value>
        </filters>
        <label>Status Provisioning</label>
    </listViews>
    <listViews>
        <fullName>Status_Request_Close</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Address__c</columns>
        <columns>Last_Case_Comment__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Master_Cases</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Request to Close</value>
        </filters>
        <label>Status Request Close</label>
    </listViews>
    <recordTypes>
        <fullName>EE_Cases</fullName>
        <active>true</active>
        <businessProcess>EE Cases</businessProcess>
        <description>New and Existing Customer Calls</description>
        <label>EE</label>
    </recordTypes>
    <recordTypes>
        <fullName>EE_Contractors</fullName>
        <active>false</active>
        <businessProcess>EE Cases</businessProcess>
        <label>EE Contractors</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Cases</fullName>
        <active>true</active>
        <businessProcess>EE Cases</businessProcess>
        <label>PV</label>
    </recordTypes>
    <recordTypes>
        <fullName>PM</fullName>
        <active>true</active>
        <businessProcess>PM Cases</businessProcess>
        <description>Project Management Cases</description>
        <label>PM</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF2</fullName>
        <active>true</active>
        <businessProcess>SF2</businessProcess>
        <description>SF2 201402 Implementation</description>
        <label>SF2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Thermal</fullName>
        <active>true</active>
        <businessProcess>EE Cases</businessProcess>
        <label>Thermal</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Restrict_Partner_Case_Statuses</fullName>
        <active>true</active>
        <description>Restricts Partner users from selecting any case status other than New, Escalated, or Request Manager Review.</description>
        <errorConditionFormula>AND(
NOT(OR(
 (ISPICKVAL( Status , &quot;New&quot;)),
 (ISPICKVAL( Status , &quot;Escalated&quot;)),
 (ISPICKVAL( Status , &quot;Request Manager Review&quot;))
)),
  CONTAINS($Profile.Name, &quot;Partner User&quot;)

)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You do not have permission to select this status value. Please select New, Escalated, or Request Manager Review.</errorMessage>
    </validationRules>
</CustomObject>